# lispy

./: .ccls  .clang-format  .gitignore  .nvimrc  CMakeLists.txt  LEnv.cpp  LEnv.hpp  LValue.cpp  LValue.hpp  Lispy.cpp  Lispy.hpp  Makefile  README.md  builtin.cpp  builtin.hpp  editline.hpp  gen_headers.cpp  language.txt  lenv.cpp  lenv.hpp  lispy.cpp  lispy.hpp  lispy_config.h.in  lval.cpp  lval.hpp  lval_error.cpp  lval_error.hpp  main.cpp  parsing.cpp  parsing.h  parsing.hpp  prelude.lspy  stdlib.lspy
examples/: case-select.lspy
mpc/: CMakeLists.txt
